refactor #78 : 뉴스 기사 수집
- 테스트 시나리오 구조 수정